fixed unit test problems